--- a/proyecto_06/src/main/resources/templates/pruebas/listado2.html
+++ b/proyecto_06/src/main/resources/templates/pruebas/listado2.html
@@ -11,8 +11,8 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{pruebas/fragmentos :: filtros}"/>
-        <section th:replace="~{pruebas/fragmentos :: tarjetas}"/>
+        <section th:replace="~{paquetes/fragmentos :: filtros}"/>
+        <section th:replace="~{paquetes/fragmentos :: tarjetas}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
