--- a/proyecto_06/src/main/resources/templates/paquetes/listado.html
+++ b/proyecto_06/src/main/resources/templates/paquetes/listado.html
@@ -12,6 +12,7 @@
         <header th:replace="~{layout/plantilla :: header}"/>
         
         <section th:replace="~{paquetes/fragmentos :: botonesAgregar}"/> 
+        <section th:replace="~{paquetes/fragmentos :: filtros}"/>
         <section th:replace="~{paquetes/fragmentos :: agregarPaquetes}"/>
         <section th:replace="~{paquetes/fragmentos :: listadoPaquetes}"/>
         
