--- a/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
@@ -130,10 +130,10 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-success text-white mb-3">
+                        <div class="card text-center bg-info text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{vuelos.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${TotalVuelos}]]</h4>
+                                <h4 class="fs-2"><i class="fa-solid fa-plane"></i> [[${totalVuelos}]]</h4>
                             </div>
                         </div>
                     </div>
