--- a/proyecto_06/src/main/resources/templates/Checkin/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/Checkin/fragmentos.html
@@ -107,10 +107,10 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-success text-white mb-3">
+                        <div class="card text-center bg-info text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{checkin.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${TotalCheckin}]]</h4>
+                                <h4 class="fs-2"><i class="fa-solid fa-bell-concierge"></i> [[${totalCheckin}]]</h4>
                             </div>
                         </div>
                     </div>
