--- a/proyecto_06/src/main/resources/templates/Contacto/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/Contacto/fragmentos.html
@@ -120,10 +120,10 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-success text-white mb-3">
+                        <div class="card text-center bg-info text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{contacto.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${TotalContacto}]]</h4>
+                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalContacto}]]</h4>
                             </div>
                         </div>
                     </div>
