--- a/proyecto_06/src/main/resources/templates/reserva/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/reserva/fragmentos.html
@@ -116,10 +116,10 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-success text-white mb-3">
+                        <div class="card text-center bg-info text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{reserva.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${TotalReservas}]]</h4>
+                                <h4 class="fs-2"><i class="fa-solid fa-calendar-check"></i> [[${totalReservas}]]</h4>
                             </div>
                         </div>
                     </div>
