--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -3,131 +3,141 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <title>Proyecto06</title>
-    <meta charset="UTF-8" />
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-    <script src="/js/rutinas.js" type="text/javascript"></script>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-        .navbar-dark {
-            background-color: #2980b9; 
-        }
-        .navbar-toggler {
-            border: 1px solid #ffffff;
-        }
-        .navbar-nav .nav-item {
-            margin-right: 1rem;
-        }
-        #main-header {
-            background-image: url('avion.png');
-            background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
-            background-position: center; /* Centra la imagen en el contenedor */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
-            color: #333333; /* Color del texto */
-            padding: 2rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-    
-        footer {
-            background-color: #e5e7e9;
-            color: #f8f9fa;
-            border-top: 2px solid #ffffff;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-            padding: 1rem 0;
-        }
-        .btn-white {
-            background-color: #ffffff;
-            color: #212529;
-            border: 1px solid #dee2e6;
-        }
-        .btn-white:hover {
-            background-color: #f8f9fa;
-            color: #212529;
-        }
-    </style>
-</head>
-<body>
+    <head th:fragment="head">
+        <title>Proyecto06</title>
+        <meta charset="UTF-8" />
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <script src="/js/rutinas.js" type="text/javascript"></script>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+            <style>
+                body {
+                    font-family: 'Roboto', sans-serif;
+                }
+                .navbar-dark {
+                    background-color: #2980b9;
+                }
+                .navbar-toggler {
+                    border: 1px solid #ffffff;
+                }
+                .navbar-nav .nav-item {
+                    margin-right: 1rem;
+                }
+                #main-header {
+                    background-image: url('avion.png');
+                    background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
+                    background-position: center; /* Centra la imagen en el contenedor */
+                    background-repeat: no-repeat; /* Evita que la imagen se repita */
+                    color: #333333; /* Color del texto */
+                    padding: 2rem;
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                }
 
-<header th:fragment="header" class="header">
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container">
-            <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto/listado}">[[#{plantilla.contacto}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/paquetes/listado}">[[#{plantilla.paquetes}]]</a></li>
-                    <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categoria}]]</a></li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
-                            <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                footer {
+                    background-color: #e5e7e9;
+                    color: #f8f9fa;
+                    border-top: 2px solid #ffffff;
+                    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+                    padding: 1rem 0;
+                }
+                .btn-white {
+                    background-color: #ffffff;
+                    color: #212529;
+                    border: 1px solid #dee2e6;
+                }
+                .btn-white:hover {
+                    background-color: #f8f9fa;
+                    color: #212529;
+                }
+            </style>
+    </head>
+    <body>
+
+        <header th:fragment="header" class="header">
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <div class="container">
+                    <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
+                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/paquetes/listado}">[[#{plantilla.paquetes}]]</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categoria}]]</a></li>
+                            <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
+                                <a class="nav-link dropdown-toggle" 
+                                   data-bs-toggle="dropdown" 
+                                   href="#" 
+                                   role="button" 
+                                   aria-expanded="false">[[#{plantilla.pruebas}]]</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item"  th:href="@{/contacto/listado}">[[#{plantilla.contacto}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuario}]]</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </li>
-                </ul>
-                <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
-                    <li class="nav-item px-2">
-                        <a class="nav-menu-link nav-link" th:href="@{/login}">
-                            <i class="fas fa-right-to-bracket"></i>     
-                        </a> 
-                    </li>
-                </ul>
-                <ul class="navbar-nav" sec:authorize="isAuthenticated()">
-                    <li class="nav-item text-white my-auto">
-                        <img th:src="@{${session.usuarioImagen}}"
-                             class="rounded-circle"
-                             height="40"
-                             alt="alt"/>
-                        <span sec:authentication="name">Jhon</span>
-                    </li>    
-                    <li class="nav-item text-white my-auto">
-                        <form method="post" th:action="@{/logout}">
-                            <button class="btn btn-white">
-                                <i class="fas fa-right-from-bracket"></i> 
-                            </button>
-                        </form>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <section id="main-header" class="py-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                   <h1><i class="fas fa-plane"></i> Bienvenido a DESTINOS TV</h1>
+                        <ul class="navbar-nav">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">[[#{plantilla.idioma}]]</a>
+                                <ul class="dropdown-menu dropdown-menu-dark">
+                                    <li><a class="dropdown-item" th:href="@{/(lang=es)}">ES</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/(lang=en)}">EN</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/login}">
+                                    <i class="fas fa-right-to-bracket"></i>     
+                                </a> 
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav" sec:authorize="isAuthenticated()">
+                            <li class="nav-item text-white my-auto">
+                                <img th:src="@{${session.usuarioImagen}}"
+                                     class="rounded-circle"
+                                     height="40"
+                                     alt="alt"/>
+                                <span sec:authentication="name">Jhon</span>
+                            </li>    
+                            <li class="nav-item text-white my-auto">
+                                <form method="post" th:action="@{/logout}">
+                                    <button class="btn btn-white">
+                                        <i class="fas fa-right-from-bracket"></i> 
+                                    </button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+
+            <section id="main-header" class="py-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1><i class="fas fa-plane"></i> Bienvenido a DESTINOS TV</h1>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </header>       
+
+        <footer th:fragment="footer">
+            <div class="container">
+                <p class="lead text-center">
+                    &COPY; [[#{plantilla.derechos}]] 
+                </p>
             </div>
-        </div>
-    </section>
+        </footer>
 
-</header>       
-
-<footer th:fragment="footer">
-    <div class="container">
-        <p class="lead text-center">
-            &COPY; [[#{plantilla.derechos}]] 
-        </p>
-    </div>
-</footer>
-
-</body>
+    </body>
 </html>
