--- a/proyecto_06/src/main/resources/static/css/Styles.css
+++ b/proyecto_06/src/main/resources/static/css/Styles.css
@@ -1,8 +1,38 @@
-.fondo {
-    background-image: url('avion.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
+body {
+    font-family: 'Roboto', sans-serif;
+}
+.navbar-dark {
+    background-color: #2980b9;
+}
+.navbar-toggler {
+    border: 1px solid #ffffff;
+}
+.navbar-nav .nav-item {
+    margin-right: 1rem;
+}
+#main-header {
+    background-image: url('avion.png');
+    background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
+    background-position: center; /* Centra la imagen en el contenedor */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    color: #333333; /* Color del texto */
+    padding: 2rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+footer {
+    background-color: #e5e7e9;
+    color: #f8f9fa;
+    border-top: 2px solid #ffffff;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    padding: 1rem 0;
+}
+.btn-white {
+    background-color: #ffffff;
+    color: #212529;
+    border: 1px solid #dee2e6;
+}
+.btn-white:hover {
+    background-color: #f8f9fa;
+    color: #212529;
+}
