--- a/proyecto_06/src/main/resources/templates/Checkin/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/Checkin/fragmentos.html
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-info text-white mb-3">
+                        <div class="card text-center bg-warning text-black mb-3">
                             <div class="card-body">
                                 <h3>[[#{checkin.total}]]</h3>
                                 <h4 class="fs-2"><i class="fa-solid fa-bell-concierge"></i> [[${totalCheckin}]]</h4>
