--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -17,41 +17,52 @@
                 body {
                     font-family: 'Roboto', sans-serif;
                 }
+
                 .navbar-dark {
-                    background-color: #2980b9;
+                    background-color: #ffd000;
                 }
+                
+                .nav-link{
+                  color: #000000;
+                }
+
                 .navbar-toggler {
                     border: 1px solid #ffffff;
                 }
+
                 .navbar-nav .nav-item {
                     margin-right: 1rem;
                 }
+
                 #main-header {
-                    background-image: url('avion.png');
-                    background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
-                    background-position: center; /* Centra la imagen en el contenedor */
-                    background-repeat: no-repeat; /* Evita que la imagen se repita */
-                    color: #333333; /* Color del texto */
+                    background-image: url("../../static/img/avion.png");
+                    background-size: cover;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    color: #333333;
                     padding: 2rem;
                     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
                 }
 
                 footer {
-                    background-color: #e5e7e9;
-                    color: #f8f9fa;
+                    background-color: #ffd000; 
+                    color: #000000; 
                     border-top: 2px solid #ffffff;
                     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
                     padding: 1rem 0;
                 }
+
                 .btn-white {
                     background-color: #ffffff;
-                    color: #212529;
-                    border: 1px solid #dee2e6;
+                    color: #ffd000; 
+                    border: 1px solid #ffd000; 
                 }
+
                 .btn-white:hover {
                     background-color: #f8f9fa;
-                    color: #212529;
+                    color: #ffd000; 
                 }
+
             </style>
     </head>
     <body>
@@ -68,7 +79,6 @@
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/checkin/listado}">[[#{plantilla.checkin}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/pagos/listado}">[[#{plantilla.pagos}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/paquetes/listado}">[[#{plantilla.paquetes}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categoria}]]</a></li>
                             <li class="nav-item dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
