--- a/proyecto_06/src/main/resources/templates/pruebas/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/pruebas/fragmentos.html
@@ -38,7 +38,7 @@
                             </div>
                             <div>
                                 <form>
-                                    <input type="hidden" name="texto" th:value="${p.idPaquetes}"/>
+                                    <input type="hidden" name="texto" th:value="${p.idPaquete}"/>
                                     <input type="hidden" name="texto" th:value="${p.existencias}"/>
                                     <button class="btn btn-ligth" 
                                             id="addCar" 
