--- a/proyecto_06/src/main/resources/templates/usuario/listado.html
+++ b/proyecto_06/src/main/resources/templates/usuario/listado.html
@@ -4,7 +4,7 @@
       xmlns:sec="http//www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       xmlns:th="http//www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}"
-        <title>TechShopcito</title>
+        <title>DestinosTV</title>
         <meta charset="UTF-8"/> 
       
     </head>
