--- a/proyecto_06/src/main/resources/templates/registro/nuevo.html
+++ b/proyecto_06/src/main/resources/templates/registro/nuevo.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>        
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http//www.thymeleaf.org/thymeleaf-extras-springsecurity6"
+      xmlns:th="http//www.thymeleaf.org">
+    <head th:replace="~{layout/plantilla :: head}"
+        <title>TechShopcito</title>
+        <meta charset="UTF-8"/> 
+      
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
-
-        <section th:replace="~{registro/fragmentos :: nuevoUsuario}"/>
-
-        <footer th:replace="~{layout/plantilla :: footer}"/>
-    </body>
+        
+         <section th:replace="~{registro/fragmentos :: nuevoUsuario}"/>
+        
+        <footer th:replace="~{layout/plantilla :: footer}"/> 
+       
+    </body>
 </html>
