--- a/proyecto_06/src/main/resources/templates/usuario/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/usuario/fragmentos.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
+        <title>DestinosTV</title>
     </head>
     <body>
         <!-- 1 Sección para crear el boton de agregar... llamará a una ventana modal-->
@@ -107,7 +107,7 @@
                                             <td>[[${usuario.username}]]</td>
                                             <td>[[${usuario.nombre}]]</td>
                                             <td>[[${usuario.apellidos}]]</td>
-                                            <td><img th:src="@{${usuario.rutaImagen}}" alt="your image" height="40"/></td>
+                                            <td> <img th:src="@{${usuario.rutaImagen}}" alt="your image" height="40"/></td>
                                             <td sec:authorize="hasRole('ROLE_ADMIN')">
                                                 <a th:href="@{/usuario/eliminar/}+${usuario.idUsuario}"
                                                    class="btn btn-danger">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-warning text-black mb-3">
+                        <div class="card text-center bg-success text-white mb-3">
                             <div class="card-body">
                                 <h3>[[#{usuario.total}]]</h3>
                                 <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalUsuarios}]]</h4>
@@ -217,49 +217,6 @@
                 </div>
             </div>
         </section>
-    </body>
-</html>
-
-
-Recorte007 usuario\listado.html
-==========
-
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
-    </head>
-    <body>
-        <header th:replace="~{layout/plantilla :: header}"></header>
-
-        <section th:replace="~{usuario/fragmentos :: botonesAgregar}"></section>
-        <section th:replace="~{usuario/fragmentos :: agregarUsuario}"></section>
-        <section th:replace="~{usuario/fragmentos :: listadoUsuarios}"></section>
-        
-        <footer th:replace="~{layout/plantilla :: footer}"></footer>
-
-    </body>
-</html>
-
-Recorte008 usuario\modifica.html
-==========
-
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-    <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
-    </head>
-    <body>
-        <header th:replace="~{layout/plantilla :: header}"></header>
-
-        <section th:replace="~{usuario/fragmentos :: editarUsuario}"></section>
-
-        <footer th:replace="~{layout/plantilla :: footer}"></footer>
-
     </body>
 </html>
 
