--- a/proyecto_06/src/main/resources/templates/pruebas/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/pruebas/fragmentos.html
@@ -40,12 +40,9 @@
                                 <form>
                                     <input type="hidden" name="texto" th:value="${p.idPaquete}"/>
                                     <input type="hidden" name="texto" th:value="${p.existencias}"/>
-                                    <button class="btn btn-ligth" 
-                                            id="addCar" 
-                                            name="addCar" 
-                                            onclick="addCart(this.form)" 
-                                            type="button">
-                                        <i class="fas fa-cart-plus"></i>
+                                    <button class="btn btn-ligth" id="addCar" 
+                                            name="addCar" onclick="addCart(this.form)" 
+                                            type="button"><i class="fas fa-cart-plus"></i>
                                     </button>
                                 </form>
                             </div>
