--- a/src/main/resources/templates/vuelos/fragmentos.html
+++ b/src/main/resources/templates/vuelos/fragmentos.html
@@ -218,7 +218,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/vuelos/eliminar/}+${vuelos.idVuelos}"
+                        <a th:href="@{/vuelos/eliminar/}+${vuelos.idVuelo}"
                            class="btn btn-danger">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
