--- a/src/main/resources/templates/Checkin/fragmentos.html
+++ b/src/main/resources/templates/Checkin/fragmentos.html
@@ -48,6 +48,10 @@
                                     <label for="idCheckin">[[#{checkin.idCheckin}]]</label>
                                     <input type="text" class="form-control" name="idCheckin" required="true"/>
                                 </div>
+                                   <div class="mb-3">
+                                    <label for="idReserva">[[#{checkin.idReserva}]]</label>
+                                    <input type="text" class="form-control" name="idReserva" required="true"/>
+                                </div>
                                 <div class="mb-3">
                                     <label for="fechaCheckin">[[#{checkin.fechaCheckin}]]</label>
                                     <input type="text" class="form-control" name="fechaCheckin" required="true"/>
